--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p>Python projects such as an Anagram Matcher, Rock-Paper-Scissors, and Word Counter with extended features.</p>
     
           <a href="https://github.com/JatiPat/jatipat.github.io"><h5>Personal Portfolio<h5></a>
-          <p>What you're looking at right now! A clean portfolio good for any screen made with HTML, CSS, and JavaScript</p>
+          <p>What you're looking at right now! A clean portfolio fit for any screen made with HTML, CSS, and JavaScript</p>
 
           <a href="https://github.com/JatiPat/FamilyTree"><h5>Prolog Family Tree<h5></a>
           <p>Simple project to make a family tree using Prolog extended to add more labels.</p>
