using defer on javascript file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-
+    
+    <!-- Javascript for tabbing -->
+    <script src="script.js" defer></script> 
 
 </head>
 
@@ -97,7 +99,5 @@
     </section>
   
   </div>
-
-  <script src="script.js" defer></script> <!-- Javascript for tabbing -->
 
 </body>
