--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <nav> <!-- Nav Bar -->
         <div class="title"> 
-          <h4> Jatin Patel</h4>
+          <a href="https://github.com/JatiPat"><h4>Jatin Patel</h4></a>
         </div>
         <ul class="tabs">
           <li data-tab-target="#about" class="active tab">About Me.</li>
@@ -78,6 +78,9 @@
           <h2>Projects</h2>
           <a href="https://github.com/JatiPat/python-projects"><h5>Python Programming<h5></a>
           <p>Python projects such as an Anagram Matcher, Rock-Paper-Scissors, and Word Counter with extended features.</p>
+
+          <a href="https://github.com/JatiPat/LeetCode"><h5>Java LeetCode<h5></a>
+          <p>Questions completed on LeetCode to practice Java and important data structures and algorithms.</p>
     
           <a href="https://github.com/JatiPat/jatipat.github.io"><h5>Personal Portfolio<h5></a>
           <p>What you're looking at right now! A clean portfolio fit for any screen made with HTML, CSS, and JavaScript</p>
@@ -89,9 +92,11 @@
         <div id="contact" data-tab-content> <!-- Contact Content -->
             <h2>Contact Information</h2>
             <h5>Find me on <a href="https://www.linkedin.com/in/jatin-patel-2b20b8214/">LinkedIn</a> <br>
-              Email me at <a href="mailto: jatinp1029@gmail.com">jatinp1029@gmail.com</a> <br><br>
-              That's all for now! <br>
-              Thank you for visiting and have a nice day!</h5> 
+                Email me at <a href="mailto: jatinp1029@gmail.com">jatinp1029@gmail.com</a> <br>
+                My GitHub page is <a href="https://github.com/JatiPat">github.com/JatiPat</a> <br><br>
+                That's all for now! <br>
+                Thank you for visiting and have a nice day!
+            </h5> 
         </div>
 
       </div>
@@ -99,5 +104,4 @@
     </section>
   
   </div>
-
 </body>
