--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div id="projects" data-tab-content> <!-- Projects Content -->
           <h2>Projects</h2>
           <a href="https://github.com/JatiPat/python-projects"><h5>Python Programming<h5></a>
-          <p>Python projects such as an Anagram Matcher, Rock-Paper-Scissors, and Word Counter with extended features.</p>
+          <p>Python projects such as an Anagram Matcher, Password Generator, Rock-Paper-Scissors, and Word Counter with extended features.</p>
 
           <a href="https://github.com/JatiPat/LeetCode"><h5>Java LeetCode<h5></a>
           <p>Questions completed on LeetCode to practice Java and important data structures and algorithms.</p>
