--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="wrapper"> <!-- Used to make the two sections: picture and text--> 
 
     <aside class="image-section"> <!-- Image Section -->
-      <img src="jatin1.jpg"width="900px"> 
+      <img src="jatin.png"width="900px"> 
     </aside>
   
     <section class="text-section"> <!-- Text Section -->
