--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="wrapper"> <!-- Used to make the two sections: picture and text--> 
 
     <aside class="image-section"> <!-- Image Section -->
-      <img src="jatin.png"> 
+      <img src="jatin2.png"> 
     </aside>
   
     <section class="text-section"> <!-- Text Section -->
@@ -54,9 +54,12 @@
           • Programming Tools: Visual Studio, Github, .NET Entity Framework (EF) Core, ASP.NET MVC/API </p>
 
           <h2>Professional Experience</h2>
-          <table style="width: 100%;">
-          <tr><td>C# Associate Instructor | We Can Code IT</td> <td>September 2022 – Present</td></tr>
-          </table>
+          <div class="mytable">
+            <div class="left-column">
+              <strong>C# Associate Instructor | We Can Code IT</strong>
+            </div>
+            <div class="right-column"><p>September 2022 – Present</p></div>
+          </div>
           <p>
             • Assisted instructors in planning classroom exercises. <br>
             • Acted as a resource for students, guiding and answering questions in person and online. <br>
@@ -64,29 +67,36 @@
           </p>
 
           <h2>Education</h2>
-          <p> Cleveland State University -  Graduated Magna Cum Laude (3.64 GPA) <br>
-          Bachelor of Computer Engineering - Bachelor of Arts in Physics <br>
-          Minors in Mathematics - Computer Science <br>
-          Cleveland, Ohio - May 2022</p>
+
+          <div class="mytable">
+            <div class="left-column">
+              <strong>Cleveland State University</strong>
+            </div>
+            <div class="right-column">
+              <p>Cleveland, Ohio - May 2022</p>
+            </div>
+          </div>
+          <p>  
+          • Bachelor of Computer Engineering - Bachelor of Arts in Physics <br>
+          • Minors in Mathematics - Computer Science <br>
+          • Graduated Magna Cum Laude (3.64 GPA)</p>
 
         
           
           <h2>Soft Skills</h2>
-          <table style="width:100%">
-            <tr>
-              <td>• Effective writer and communicator</td>
-              <td>•	Patient listener and collaborator</td>
-            </tr>
-            <tr>
-              <td>• Multi-tasker and detail-oriented </td>
-              <td>•	Adaptable and eager to learn</td>
-            </tr>
-            <tr>
-              <td>•	Expert in Microsoft Office Suite</td>
-              <td>•	Analytical problem-solver</td>
-            </tr>
-          </table>
-        </div>
+            <div class="mytable">
+              <div class="left-column">
+                • Effective writer and communicator<br>
+               • Multi-tasker and detail-oriented <br>
+                • Expert in Microsoft Office Suite<br>
+              </div>
+              <div class="right-column2">
+                • Patient listener and collaborator<br>
+                • Adaptable and eager to learn<br>
+                • Analytical problem-solver
+              </div>
+            </div>
+
 
         <div id="projects" data-tab-content> <!-- Projects Content -->
 
