Added Hot Pizza Ref

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="about" data-tab-content class="active">
           <h2>Background</h2>
           <p>I'm .NET Developer dedicated to leveraging programming expertise and strong communication skills to seek a full-time
-          position and make a meaningful contribution.
+          position and make a meaningful contribution.</p>
          
 
           <h2>Coding Skills</h2>
@@ -97,13 +97,18 @@
               </div>
             </div>
 
-
+        </div>
         <div id="projects" data-tab-content> <!-- Projects Content -->
 
           <h2>New Projects</h2>
-          <h5>WIP</h5>
-
-          <h2>Old Projects</h2>
+          <a href="https://github.com/JatiPat/HotPizzaSolution">
+            <h5>Hot Pizza Website</h5>
+          </a>
+          <h5>An ASP.NET 8 MVC project made to create an e-commerce website to buy and rate pizzas. Currently in progress.</h5>
+            <br>
+          <h5>More Coming Soon.</h5>
+            <br>
+          <h2>Old School Projects</h2>
           <a href="https://github.com/JatiPat/python-projects"><h5>Python Programming<h5></a>
           <p>Python projects such as an Anagram Matcher, Password Generator, Rock-Paper-Scissors, and Word Counter with extended features.</p>
 
