--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class= "tab-content"> <!-- About me Content -->
         <div id="about" data-tab-content class="active">
           <h2>Background</h2>
-          <p>I'm .NET Developer dedicated to leveraging programming expertise and strong communication skills to seek a full-time
+          <p>I'm a .NET Developer dedicated to leveraging programming expertise and strong communication skills to seek a full-time
           position and make a meaningful contribution.</p>
          
 
