--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
       <div class= "tab-content"> <!-- About me Content -->
         <div id="about" data-tab-content class="active">
           <h2>Background</h2>
-          <p>I'm a .NET Developer dedicated to leveraging programming expertise and strong communication skills to seek a full-time
-          position and make a meaningful contribution.</p>
+          <p>I'm a .NET Developer leveraging programming expertise and strong communication skills to seek a full-time position and make a
+          meaningful contribution. </p>
+
          
 
           <h2>Coding Skills</h2>
@@ -104,7 +105,7 @@
           <a href="https://github.com/JatiPat/HotPizzaSolution">
             <h5>Hot Pizza Website</h5>
           </a>
-          <h5>An ASP.NET 8 MVC project made to create an e-commerce website to buy and rate pizzas. Currently in progress.</h5>
+          <h5>An ASP.NET 8 MVC project made to be an e-commerce website to buy pizzas. Currently in progress.</h5>
             <br>
           <h5>More Coming Soon.</h5>
             <br>
