fixing formatting issues

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         
           
           <h2>Soft Skills</h2>
-            <div class="mytable">
+            <div class="mytable2">
               <div class="left-column">
                 • Effective writer and communicator<br>
                • Multi-tasker and detail-oriented <br>
