more content fixin'

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          
 
           <h2>Coding Skills</h2>
-          <p>• Programing Languages: C#, HTML/CSS, JavaScript, Python, Java <br>
+          <p>• Programing Languages: C#, JavaScript, Python, Java, C, C++, and more. <br>
           • Programming Tools: Visual Studio, Github, .NET Entity Framework (EF) Core, ASP.NET MVC/API </p>
 
           <h2>Professional Experience</h2>
