--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="left-column">
               <strong>C# Associate Instructor | We Can Code IT</strong>
             </div>
-            <div class="right-column"><p>September 2022 – Present</p></div>
+            <div class="right-column"><p>September 2022 – September 2023</p></div>
           </div>
           <p>
             • Assisted instructors in planning classroom exercises. <br>
