--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
           <h2>Coding Skills</h2>
           <p>• Programing Languages: C#, JavaScript, Python, Java, C, C++, and more. <br>
-          • Programming Tools: Visual Studio, Github, .NET Entity Framework (EF) Core, ASP.NET MVC/API </p>
+          • Programming Tools: Visual Studio, Git/Github, .NET Entity Framework (EF) Core, ASP.NET MVC/API </p>
 
           <h2>Professional Experience</h2>
           <div class="mytable">
