Fixing Syntax issues

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
           </a>
           <h5>An ASP.NET 8 MVC project made to be an e-commerce website to buy pizzas. Currently in progress.</h5>
 
-            <a href="https://github.com/JatiPat/CSharp_LeetCode">
-              <h5>C# LeetCode<h5>
-            </a>
-            <p>Questions completed on LeetCode to practice C# and important data structures and algorithms.</p>
+          <a href="https://github.com/JatiPat/CSharp_LeetCode">
+            <h5>C# LeetCode<h5>
+          </a>
+          <p>Questions completed on LeetCode to practice C# and important data structures and algorithms.</p>
     
-          <h5>More Coming Soon.</h5>
+          <h5>More Coming Soon!</h5>
        
           <h2>Old School Projects</h2>
           <a href="https://github.com/JatiPat/python-projects"><h5>Python Programming<h5></a>
